--- a/qdipsx/package.json
+++ b/qdipsx/package.json
@@ -10,9 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook": "^8.1.4",
+    "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-twitter-embed": "^4.0.4",
     "redux": "^4.2.0",
     "redux-devtools": "^3.7.0",
     "styled-components": "^5.3.5",
