--- a/qdipsx/package.json
+++ b/qdipsx/package.json
@@ -11,11 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-facebook": "^8.1.4",
+    "react-facebook": "^9.0.5",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-social-media-embed": "^2.2.2",
     "react-twitter-embed": "^4.0.4",
     "redux": "^4.2.0",
     "redux-devtools": "^3.7.0",
